# slack_assistant

./: .gitignore  Dockerfile  README.md  main.py  main_refactored.py  main_socket.py  pyproject.toml  requirements.txt  slack_test.py  test
scratch/: main_scratch.py  main_socket.py
tools/: blockscout.py  coingecko.py  custom_slack.py  original_slack.py
utils/: load_env.py
